--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Release History
 ***************
 
+1.0a3 (2010-03-21)
+------------------
+- new sudosupervisor for when you need to boot as root [Dylan Jay]
+- Made compatible with collective.hostout 1.0a5 [Dylan Jay]
+- Improved startup and shutdown so use only buildout-user + reload rather than "supervisor shutdown" [Dylan Jay]
+
+
 1.0a2 (2010-06-03)
 ------------------
 - falfile entrypoint
